--- a/CourseManagementService/src/main/resources/application.properties
+++ b/CourseManagementService/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=CourseManagementService
 server.port=8085
+
+spring.datasource.url=jdbc:mysql://localhost:3306/EMSServer
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
