--- a/ActivityManagementService/src/main/resources/application.properties
+++ b/ActivityManagementService/src/main/resources/application.properties
@@ -1,2 +1,19 @@
 spring.application.name=ActivityManagementService
 server.port=8082
+
+
+# Eureka client configuration (registers this application with another Eureka server)
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Eureka server configuration (if this application also acts as a Eureka server)
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.healthcheck.enabled=true
+
+# Eureka server configuration (if this application serves as a Eureka server)
+eureka.server.enable-self-preservation=true
+eureka.server.eviction-interval-timer-in-ms=60000
+
+# Logging configuration
+logging.level.root=INFO
+logging.file.path=logs
