--- a/enrollment-pipeline-service/src/main/resources/application.properties
+++ b/enrollment-pipeline-service/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.application.name=enrollment-pipeline-service
-server.port=8083
+spring.datasource.url=jdbc:mysql://localhost:3306/emsproject
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
