--- a/UserManagement/src/main/resources/application.properties
+++ b/UserManagement/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=UserManagement
 server.port=8081
+
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/UserManagement
+
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
