--- a/ActivityManagementService/src/main/resources/application.properties
+++ b/ActivityManagementService/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=ActivityManagementService
 server.port=8082
+
+# DataSource settings for MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/emsserver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate settings
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
