--- a/AdmissionsFeeService/src/main/resources/application.properties
+++ b/AdmissionsFeeService/src/main/resources/application.properties
@@ -1,2 +1,22 @@
 spring.application.name=AdmissionsFeeService
+
+# Server Configuration
 server.port=8086
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/admissionsfeeservice
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.example=DEBUG
+
+# JPA Properties
+spring.jpa.properties.hibernate.format_sql=true
