exception handling and api created

--- a/FacultyTimetableService/src/main/resources/application.properties
+++ b/FacultyTimetableService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=FacultyTimetableService
 server.port=8087
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/timetablemanagement
+spring.datasource.url=jdbc:mysql://localhost:3306/newems
 spring.datasource.username=root
 spring.datasource.password=rohit
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
