--- a/JWT-Authentication/src/main/resources/application.properties
+++ b/JWT-Authentication/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/EMSServer
+spring.datasource.url= jdbc:mysql://localhost:3306/john
 spring.datasource.username= root
 spring.datasource.password= root
-
+spring.application.name=JWTAuthentication
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 server.port=9898
@@ -10,3 +10,4 @@ EMS.app.jwtCookieName= bezkoder
 EMS.app.jwtSecret= ======================BezKoder=Spring===========================
 EMS.app.jwtExpirationMs= 30000
 #86400000
+
