--- a/CommunicationLogService/src/main/resources/application.properties
+++ b/CommunicationLogService/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=CommunicationLogService
 server.port=8084
+
+spring.datasource.url=jdbc:mysql://localhost:3306/emsserver
+spring.datasource.username=root
+spring.datasource.password=rohit
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
