--- a/AdmissionsFeeService/src/main/resources/application.properties
+++ b/AdmissionsFeeService/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.name=AdmissionsFeeService
 
 # Server Configuration
 server.port=8086
@@ -20,3 +19,7 @@ logging.level.com.example=DEBUG
 
 # JPA Properties
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.application.name: admissions-service
+
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
