--- a/enrollment-pipeline-service/src/main/resources/application.properties
+++ b/enrollment-pipeline-service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+spring.application.name: enrollment-service
+
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
