--- a/enrollment-pipeline-service/src/main/resources/application.properties
+++ b/enrollment-pipeline-service/src/main/resources/application.properties
@@ -2,9 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/emsproject
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.application.name: enrollment-service
 
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
