--- a/RoleFeatureService/src/main/resources/application.properties
+++ b/RoleFeatureService/src/main/resources/application.properties
@@ -1,2 +1,13 @@
-spring.application.name=RoleFeatureService
+spring.application.name=ActivityManagementService
 server.port=8080
+
+# DataSource settings for MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/FeatureRoleMapping
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate settings
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
