--- a/AdmissionsFeeService/AdmissionsFeeService/src/main/resources/application.properties
+++ b/AdmissionsFeeService/AdmissionsFeeService/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=AdmissionsFeeService
 server.port=8086
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/admissionsfeeservice
+spring.datasource.url=jdbc:mysql://localhost:3306/tusharems
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
