--- a/CourseManagementService/src/main/resources/application.properties
+++ b/CourseManagementService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=CourseManagementService
 server.port=8085
 
-spring.datasource.url=jdbc:mysql://localhost:3306/EMSServer
+spring.datasource.url=jdbc:mysql://localhost:3306/tusharems
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
