--- a/spring-boot-spring-security-jwt-authentication-master/src/main/resources/application.properties
+++ b/spring-boot-spring-security-jwt-authentication-master/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/john
+spring.datasource.url=jdbc:mysql://localhost:3306/tusharems
 spring.datasource.username=root
 spring.datasource.password=root
 
